[package]
name = "jeffdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-client"
path = "src/client.rs"

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "explore"
path = "src/explore.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
